# homework-20250703

./: README.md  main.py  pyproject.toml
domain/: repositories.py  services.py
infrastructure/: database.py  orm.py  repositories.py  unit_of_work.py
tests/test_domain/: test_services.py
tests/test_infrastructure/: test_orm.py
