[project]
name = "warehouse-management"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey",email = "sgudkovv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "mypy (>=1.15.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.setuptools.packages.find]
include = ["warehouse_management"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]